<?xml version="1.0"?>
<package>
  <name>real_time_tools</name>
  <version>1.0.0</version>
  <description>various tools for testing realtime on rtpreempt</description>
  <license>undeterminded</license>
  <author email="vberenz@tuebingen.mpg.de">Vincent Berenz</author>
  <maintainer email="vberenz@tuebingen.mpg.de">Vincent Berenz</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- CMake module containing helper to find the OS, boost, python, etc. -->
  <build_depend> mpi_cmake_modules </build_depend>
  <run_depend>   mpi_cmake_modules </run_depend>

  <export>
  </export>
</package>
