<?xml version="1.0"?>
<package>
  <name>real_time_tools</name>
  <version>1.0.0</version>
  <description>This package is a wrapper around different linux OS. It provide APIs over
    real time OSs such as Xenomai (not fully operational) and RT-PREEMPT. It also
    allows you to get the same fonctionnality (at the cost of real time) with non-real
    time OSs such as Ubuntu and MacOs (not fully fonctionnal).
  </description>
  <license>undeterminded</license>
  <author email="vberenz@tuebingen.mpg.de">Vincent Berenz</author>
  <maintainer email="vberenz@tuebingen.mpg.de">Vincent Berenz</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- CMake module containing helper to find the OS, boost, python, etc. -->
  <build_depend> mpi_cmake_modules </build_depend>
  <run_depend>   mpi_cmake_modules </run_depend>

  <export>
  </export>
</package>
