<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>


<package format="3">

    <name>real_time_tools</name>
    <version>1.0.0</version>
    
    <description>
        This package is a wrapper around different linux OS. It provide APIs
        over real time OSs such as Xenomai (not fully operational) and
        RT-PREEMPT. It also allows you to get the same fonctionnality (at the
        cost of real time) with non-real time OSs such as Ubuntu (std supported)
        and MacOs (not fully fonctionnal).
    </description>

    <maintainer email="vberenz@tuebingen.mpg.de">Vincent Berenz</maintainer>

    <license>BSD 3-clause</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <!-- CMake module containing helper to find the OS, boost, python, etc. -->
    <depend>mpi_cmake_modules</depend>
    <depend>pybind11_vendor</depend>
    <depend>pybind11</depend>
    <depend>Boost</depend>
    <depend>Eigen3</depend>
    <depend>Threads</depend>

    <test_depend>ament_cmake_gtest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>